--- a/src/main/webapp/WEB-INF/templates/pattern.xhtml
+++ b/src/main/webapp/WEB-INF/templates/pattern.xhtml
@@ -13,7 +13,8 @@
    </f:facet>
 
    <h:outputStylesheet library="css" name="w3.css"/>
-   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<!--   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>-->
+    <h:outputScript library="js" name="jquery-3.6.3.min.js"></h:outputScript>
    <link rel="icon" href="#{resource['pictures/rapture-00.png']}"/>
    <ui:insert name="head">
       <title>Лабораторная работа #3</title>
